fix border radius on mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -362,7 +362,6 @@ textarea {
     max-width: 480px;
     margin: 74px auto 42px;
     border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 16px;
     position: relative;
     border: 1px solid rgba(255, 255, 255, 0.1);
     border-left: 0;
